# eif

./: Makefile.in  config.h.in  configure  configure.ac
contrib/: Makefile.in
doc/: Makefile.in
src/: Makefile.in  eif.c  empcon.c  games.c  print.c
src/connect/: Makefile.in  expect.c  sock.c
